--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "make": "electron-forge make"
   },
   "dependencies": {
+    "concurrently": "^6.1.0",
+    "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
@@ -26,7 +28,8 @@
   "config": {
     "forge": {
       "packagerConfig": {},
-      "makers": [{
+      "makers": [
+        {
           "name": "@electron-forge/maker-squirrel",
           "config": {
             "name": "retail_os"
